<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">
    <!--使用DrawerLayout需要将其放在根节点,因此将原来的根节点LinearLayout放在了次根节点-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false">
        <!--权重1-->
        <TextView
            android:textColor="@android:color/holo_red_light"
            android:layout_weight="1"
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#f7f7f7"
            android:gravity="center_vertical|end"
            android:textSize="@dimen/textViewSize"
            android:paddingEnd="2dp"
            android:textIsSelectable="true" /> <!--令editText2不可编辑,但可以复制-->
        <!--权重1-->
        <TextView
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#f7f7f7"
            android:gravity="center_vertical|end"
            android:paddingEnd="2dp"
            android:textSize="@dimen/textViewSize"
            android:textIsSelectable="true"/>
        <!--权重6-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/binary"
                android:background="@android:color/white"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="4dp">
                <RadioGroup
                    android:id="@+id/radiog1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/radio2"
                        android:text="@string/radio2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/radioText_dimen"
                        android:paddingBottom="2dp"/>
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/radio8"
                        android:text="@string/radio8_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/radioText_dimen"/>
                </RadioGroup>
                <RadioGroup
                    android:id="@+id/radiog2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <RadioButton
                        android:layout_weight="1"
                        android:text="@string/radio10_name"
                        android:id="@+id/radio10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textSize="@dimen/radioText_dimen"
                        android:paddingBottom="2dp"/>

                    <RadioButton
                        android:layout_weight="1"
                        android:text="@string/radio16_name"
                        android:id="@+id/radio16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/radioText_dimen"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:onClick="onBtnLeftFourClick"
                    android:id="@+id/btn_pi"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="π"
                    android:textSize="@dimen/btnFunction_dimen"/>
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:onClick="onBtnLeftFourClick"
                    android:id="@+id/btn_e"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/e_name"
                    android:textAllCaps="false"
                    android:textSize="@dimen/btnFunction_dimen" />

                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_l"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btnLeft_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_r"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btnRight_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_cls"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/cls_name"
                    android:textSize="@dimen/btnClsAndDel_dimen" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_del"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/del_name"
                    android:textSize="@dimen/btnClsAndDel_dimen" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:onClick="onBtnLeftFourClick"
                    android:id="@+id/btn_tan"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/tan_name"
                    android:textSize="@dimen/btnFunction_dimen" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:onClick="onBtnLeftFourClick"
                    android:id="@+id/btn_lg"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/lg_name"
                    android:textSize="@dimen/btnFunction_dimen" />

                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_7"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn7_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_8"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn8_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_9"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn9_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_divide"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/divide_name"
                    android:textSize="@dimen/btnMass"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:onClick="onBtnLeftFourClick"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_sin"
                    android:text="@string/sin_name"
                    android:textSize="@dimen/btnFunction_dimen" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:onClick="onBtnLeftFourClick"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_ln"
                    android:text="@string/ln_name"
                    android:textSize="@dimen/btnFunction_dimen" />

                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_4"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn4_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_5"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn5_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_6"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn6_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_multiply"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/multiply_name"
                    android:textSize="@dimen/btnMass"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:onClick="onBtnLeftFourClick"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_cos"
                    android:text="@string/cos_name"
                    android:textSize="@dimen/btnFunction_dimen" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:onClick="onBtnLeftFourClick"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_factorial"
                    android:text="@string/factorial_name"
                    android:textSize="@dimen/btnFunction_dimen" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_1"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn1_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_2"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn2_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn3_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_minus"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/minus_name"
                    android:textSize="@dimen/btnMass"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:visibility="gone"
                    android:onClick="onBtnLeftFourClick"
                    android:id="@+id/btn_gen"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/gen_name"
                    android:textSize="@dimen/btnFunction_dimen" />
                <Button
                    android:id="@+id/btn_xn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_selector"
                    android:onClick="onBtnLeftFourClick"
                    android:text="@string/xn_name"
                    android:textAllCaps="false"
                    android:textSize="@dimen/btnFunction_dimen"
                    android:visibility="gone" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_percent"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/percent_name"
                    android:textSize="@dimen/btnMass"/>
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_0"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn0_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_dot"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/dot_name"
                    android:textSize="@dimen/btnMass" />
                <Button
                    android:background="@drawable/button_bg_selector"
                    android:id="@+id/btn_plus"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/plus_name"
                    android:textSize="@dimen/btnMass"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_equal_selector_red"
                android:text="@string/equal_name"
                android:textSize="@dimen/btnEqual" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/drawer_left"/>

</android.support.v4.widget.DrawerLayout>